--- a/package.json
+++ b/package.json
@@ -1,20 +1,14 @@
 {
-  "name": "gerenciador-tarefas",
+  "name": "app-tarefas",
   "version": "1.0.0",
-  "description": "Aplicativo simples de gerenciamento de tarefas com Node.js e Express",
-  "main": "index.js",
+  "main": "src/server.js",
+  "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node src/server.js"
   },
-  "author": "Igor Chinaide",
-  "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^5.1.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.0"
-  },
-  "keywords": []
+    "express": "^4.19.0",
+    "sqlite3": "^5.1.6",
+    "cors": "^2.8.5"
+  }
 }
